--- a/wearable/src/main/res/layout/watch_face_layout.xml
+++ b/wearable/src/main/res/layout/watch_face_layout.xml
@@ -18,7 +18,7 @@
         android:gravity="center_horizontal"
         android:paddingTop="30dp"
         android:textSize="30sp"
-        android:textColor="@color/grey"/>
+        android:textColor="@color/white"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
         android:id="@+id/dateText"
         android:layout_gravity="center_horizontal"
         android:gravity="center_vertical"
-        android:textColor="@color/grey"/>
+        android:textColor="@color/white"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
